Changes to 1.2.6 +nb
[FIXES]
*lib/all_tables.php and several --> 0000-00-00 00:00:00 is not valid DATETIME since MySQL 5.7 anymore. Hence, new constants DATETIME_DATEMIN and _DATEMAX have been introduced in lib/constants.php. Default is set to 1970-01-01 ... and 2159-01-01 ... - max could be 9999-12-31, but if I get older than 160 years, I'll fix that for you


Changes to 1.2.5 +nb

[CHANGES]
*creatures.php --> forest/graveyard active will now be displayed in editor
*lib/commentary.php --> added a new hook "gmcommentarea" with section and "allow_gm"=>false to handle module requests to allow /game comments 
	 		added a fix (GM titles didn't work due to wrong variable used)
*lib/forest.php --> new hook "forest" to add stuff before the description (i.e. for mobile buttons that need to be top)
*lib/mail/case_default.php --> javascript security confirmation for move/delete of mail
*lib/pageparts.php --> added ajax script for title change (in case of new mail), needed maillinktabtext() function
*list.php --> new setting (in lib/data/configuration.php) added to show only online folks in list.php on the frontpage (default true). reason: online spiders grabbing playerlists in total makes no sense
*mailinfo_common.php --> new, needed to send a short error page in case of a timeout for the ajax functions. a full page costs bandwidth
*rawsql.php --> small text adaption for when no changes are made. Also removed error text when an UPDATE/DELETE statement produced no affected rows to show (db_num_rows error on TRUE result)
*superuser.php --> new hook to make the section "switchable"
*stables.php --> If you lack DKs to show an existing available mount, it will display that mount now in the nav as unavailable
*stables.php --> added a mountpoint to influence mount data and cost
[FIXES]
*lib/commentary.php --> forgot a closing > at a </div> - section close